--- a/11_PPCrystal/02_a0_scan/anm_matrix.ipynb
+++ b/11_PPCrystal/02_a0_scan/anm_matrix.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/samio/local/miniconda2/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import qctoolkit as qtk\n",
     "import numpy as np"
@@ -30,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -83,13 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "mol_base = qtk.Molecule('xyz/ge.xyz')"
+    "mol_base = qtk.Molecule('xyz/ge.xyz')\n",
+    "# mol_base.extend([2,2,2])\n",
+    "# mol_base.sort(order='xyz')"
    ]
   },
   {
@@ -165,9 +156,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "&INFO\n",
+      " ge\n",
+      "&END\n",
+      "\n",
+      "&CPMD\n",
+      " MIRROR\n",
+      " BENCHMARK\n",
+      "  1 0 0 0 0 0 0 0 0 0\n",
+      " OPTIMIZE WAVEFUNCTION\n",
+      " CONVERGENCE ORBITAL\n",
+      "  1.00E-05\n",
+      " MAXITER\n",
+      "  1000\n",
+      " CENTER MOLECULE OFF\n",
+      " MEMORY BIG\n",
+      "&END\n",
+      "\n",
+      "&DFT\n",
+      " FUNCTIONAL PBE\n",
+      "&END\n",
+      "\n",
+      "&SYSTEM\n",
+      " CELL VECTORS\n",
+      "     0.000000    2.715500    2.715500\n",
+      "     2.715500    0.000000    2.715500\n",
+      "     2.715500    2.715500    0.000000\n",
+      " ANGSTROM\n",
+      " CUTOFF\n",
+      "  100.0\n",
+      " KPOINTS MONKHORST-PACK\n",
+      "  1 1 1\n",
+      "&END\n",
+      "\n",
+      "&ATOMS\n",
+      "*Ge01.psp\n",
+      " LMAX=F\n",
+      "   1\n",
+      "     3.8411   3.8411   3.8411\n",
+      "*Ge00.psp\n",
+      " LMAX=F\n",
+      "   1\n",
+      "     0.0000   0.0000   0.0000\n",
+      "&END\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<qctoolkit.QM.general_io.InpContent at 0x14709c2d8410>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def cyl2par(mol, size=[1, 3]):\n",
     "    par = []\n",
@@ -181,7 +232,6 @@
     "    mol = mol_base.copy()\n",
     "    mol.sort(order='xyz')\n",
     "    for i, crd in enumerate(par):\n",
-    "        print crd\n",
     "        pp = qtk.PP(crd[1], size=size)\n",
     "        vec = [crd[2]]\n",
     "        vec.extend(crd[0])\n",
@@ -190,15 +240,17 @@
     "        mol.setAtoms(i, string=pp)\n",
     "    return mol\n",
     "\n",
-    "# mol = par2cyl(cyl2par(mol_base))\n",
-    "# inp = qtk.QMInp(mol, **qmsetting)\n",
-    "# inp.write()"
+    "mol = par2cyl(cyl2par(mol_base))\n",
+    "inp = qtk.QMInp(mol, **qmsetting)\n",
+    "inp.write()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def FDcyl(mol, i, j, step, size=[1,3], dim=15):\n",
@@ -222,7 +274,7 @@
     "        elif mode == '-':\n",
     "            vec[1+ip] -= step\n",
     "        new_pp.unvectorize(vec, size[0], range(size[1], 0, -1))\n",
-    "        new_pp.name += '_%s%02dp%02d' % (font, I, ip)\n",
+    "        new_pp.name += '_%s%03dp%03d' % (font, I, ip)\n",
     "        return new_pp\n",
     "    \n",
     "    # first order\n",
@@ -234,7 +286,7 @@
     "            mol_new = mol.copy()\n",
     "            pp = get_pp(I, ip, 'I', mode=m[1])\n",
     "            mol_new.setAtoms(I, string=pp)\n",
-    "            mol_new.name += '_i%02d%s-I%02dp%02d' % (i, m[0], I, ip)\n",
+    "            mol_new.name += '_i%03d%s-I%02dp%02d' % (i, m[0], I, ip)\n",
     "            mols.append(mol_new)\n",
     "        return mols\n",
     "    # second order\n",
@@ -248,7 +300,7 @@
     "            inds.append(ip)\n",
     "            pp = get_pp(I, ip, ind_font[t])\n",
     "            mol.setAtoms(I, string=pp)\n",
-    "        mol.name += \"_i%02dj%02d-I%02dp%02d-J%02dp%02d\" % tuple(inds)\n",
+    "        mol.name += \"_i%03dj%03d-I%02dp%02d-J%02dp%02d\" % tuple(inds)\n",
     "    return [mol]\n",
     "\n",
     "# mol_test = FDcyl(mol_base, 5, 28, 100)[0]\n",
@@ -265,31 +317,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "mols_fd = []\n",
+    "mols_ref = []\n",
     "par = cyl2par(mol_base)\n",
     "\n",
     "# get dimension of PP space\n",
     "# single atom PP space * number of atoms\n",
     "N = len(par[0][0]) * len(par)\n",
     "\n",
-    "\n",
-    "for info_a in cyl_map:\n",
-    "    mol_a = mol_base.copy()\n",
-    "    mol_a.name += '_a-' + info_a[0]\n",
-    "    mol_a.setCelldm([info_a[1], info_a[1], info_a[1], 0, 0, 0])\n",
-    "    # get off-diagonal terms\n",
-    "    for i in range(N):\n",
-    "        for j in range(i, N):\n",
-    "            mols = FDcyl(mol_a, i, j, step=0.01)\n",
-    "            mols_fd.extend(mols)\n",
+    "for info_cyl in cyl_map:\n",
+    "    mol = mol_base.copy()\n",
+    "    for i in range(mol.N):\n",
+    "        mol.setAtoms(i, Z=info_cyl[2][i])\n",
+    "        mol.name = info_cyl[0]\n",
+    "        for info_a in cyl_map:\n",
+    "            if info_a != info_cyl:\n",
+    "                mol_a = mol.copy()\n",
+    "                mol_a.name += '_a-' + info_a[0]\n",
+    "                mol_a.setCelldm([info_a[1], info_a[1], info_a[1], 0, 0, 0])\n",
+    "                mols_fd.append(mol_a)\n",
+    "                mols_ref.append(mol_a)\n",
+    "                # get off-diagonal terms\n",
+    "                for i in range(N):\n",
+    "                    for j in range(i, N):\n",
+    "                        mols = FDcyl(mol_a, i, j, step=0.01)\n",
+    "                        mols_fd.extend(mols)\n",
     "        \n",
-    "inps_fd = []\n",
+    "inps_fd = [qtk.QMInp(mol_base, **qmsetting)]\n",
     "for m in mols_fd:\n",
     "    inps_fd.append(qtk.QMInp(m, **qmsetting))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ge_a-si,\n",
+       " ge_a-ge,\n",
+       " ge_a-sige,\n",
+       " ge_a-sn,\n",
+       " ge_a-snsi,\n",
+       " ge_a-gesn,\n",
+       " ge_a-gaas,\n",
+       " ge_a-alp,\n",
+       " ge_a-alas,\n",
+       " ge_a-alsb,\n",
+       " ge_a-gap,\n",
+       " ge_a-gasb,\n",
+       " ge_a-inp,\n",
+       " ge_a-inas,\n",
+       " ge_a-insb]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mols_ref"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "inps_ref = []\n",
+    "for mol in mols_ref:\n",
+    "    inp = qtk.QMInp(mol, **qmsetting)\n",
+    "    inps_ref.append(inp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-si: cpmd' with name: ge_a-si \n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-sige: cpmd' with name: ge_a-sige \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-si.inp\n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-sige.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-sn: cpmd' with name: ge_a-sn \n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-ge: cpmd' with name: ge_a-ge \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-sn.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-ge.inp\n",
+      "\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-snsi: cpmd' with name: ge_a-snsi \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-snsi.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-gesn: cpmd' with name: ge_a-gesn \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-gesn.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-gaas: cpmd' with name: ge_a-gaas \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-gaas.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-alp: cpmd' with name: ge_a-alp \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-alp.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-alas: cpmd' with name: ge_a-alas \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-alas.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-alsb: cpmd' with name: ge_a-alsb \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-alsb.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-gap: cpmd' with name: ge_a-gap \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-gap.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-gasb: cpmd' with name: ge_a-gasb \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-gasb.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-inp: cpmd' with name: ge_a-inp \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-inp.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-inas: cpmd' with name: ge_a-inas \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-inas.inp\n",
+      "\n",
+      "\u001b[96m\u001b[1mqmRunJob:\u001b[0m runing qmjob:'ge_a-insb: cpmd' with name: ge_a-insb \n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge_a-insb.inp\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "qtk.qmRunAll(inps_ref, \"ge_ref\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93mOverwrite existing folder ge\u001b[0m\n",
+      "\u001b[96m\u001b[1mQMInp.run:\u001b[0m running job with command: cpmd.x ge.inp\n",
+      "\n",
+      "\u001b[93mge.out failed with message: list index out of range\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inp = qtk.QMInp(mol_base, debug=True, **qmsetting)\n",
+    "inp.run('ge', overwrite=True, debug=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['', '']"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mol_base.string"
    ]
   },
   {
@@ -306,7 +526,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "qtk.setting.quiet = True\n",
@@ -324,7 +546,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# pp = qtk.PP('Ge', size=[1,3])\n",
